[-] BO : fix bug #PSCFV-2387 - z-index fixes
git-svn-id: http://dev.prestashop.com/svn/v1/branches/1.5.x@15366 b9a71923-0436-4b27-9f14-aed3839534dd

--- a/admin-dev/themes/default/css/admin.css
+++ b/admin-dev/themes/default/css/admin.css
@@ -227,7 +227,7 @@ a.module_toggle_all{color: #268CCD;}
 .toolbarBox .process-icon-help{ background-image: url('../img/process-icon-help.png');}
 .toolbarBox .process-icon-help-new{ background-image: url('../img/process-icon-help-new.png');}
 
-div.fix-toolbar {border-bottom: 1px solid #E0E0E0;position:fixed;top:0;opacity:0.9;z-index:1;}
+div.fix-toolbar {border-bottom: 1px solid #E0E0E0;position:fixed;top:0;opacity:0.9;z-index:500;}
 
 /*button upload files*/
 #content .qq-upload-button {
